What is a Dalit?
Adding definition to Dalit

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>What are Dalits?</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Have you ever had a habit, or witnessed the ongoing habit of others, continue to be perpetuated with no end in site? A dalit is essentially taking a stance, calling it out, saying "no more!" Simply put, a dalit is Drawing A Line In The Sand. </p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
