--- a/index.html
+++ b/index.html
@@ -24,17 +24,12 @@
 
 <p>Have you ever had a habit, or witnessed the ongoing habit of others, continue to be perpetuated with no end in site? A dalit is essentially taking a stance, calling it out, saying "no more!" Simply put, a dalit is Drawing A Line In The Sand. </p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>This site contains a collection of dalits written from the perspective of the observer with the aim of drawing a line in the sand to end the behavior in question.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Email Etiquette</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<pre>Stray emails are the equivalent of digital litter. It's not necessary that you reply to every email received with a "Thank You," "Got it" or "Sounds good." If the sender wants confirmation that you've received the email, they can enable various options to track delivery.</pre>
 
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
@@ -52,7 +47,7 @@ $ git checkout gh-pages
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/darktunl">darktunl</a></p>
+        <p>This archive is maintained by <a href="https://github.com/darktunl">darktunl</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
